--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
+  <title>Craig's Model Rockets</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+  <h1>Craig's Model Rockets</h1>
+  
+  
 
 </body>
 </html>
