--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Craig's Model Rockets</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <title>Craig sherrill resume</title>
+    <link href="CraigResume.css" type="text/css" rel="stylesheet">
 </head>
-
 <body>
-  <h1>Craig's Model Rockets</h1>
-  
-  
+    <header>
+        <h1>Craig Sherrill</h1>
+        <h5 class="head-h5">6020 Portridge Drive</h5>
+        <h5 class="head-h5">Fort Worth, TX 76135</h5>
+        <h5 class="head-h5">craig558@yahoo.com (817) 965-4876</h5>
+    </header>
+
+    <h2><strong>PROFESSIONAL SUMMARY</strong></h2>
+
+    <p class="summary">I am a well-rounded technology professional 
+        with a proven track record of managing all aspects of 
+        large-scale technology operations. My leadership experience 
+        combined with data warehouse technologies, reporting systems, 
+        and analytics experience, allows me to get results that 
+        drive revenue, improve quality and achieve success.  
+        I am honored to have served our country in the U.S. Navy 
+        for 13 years.   
+    </p>
+
+    <div style="float: left; width: 50%;">
+            <ul>
+            <li>Business Intelligence</li>
+            <li>Master Data Management/Integration</li>
+            <li>Advanced Analytics</li>
+            <li>SOA and SaaS Integration</li>
+            <li>Technical Program Management</li>
+            <li>Personnel Management</li>
+            <li>Cloud Architecture</li>
+            <li>Data Security</li>
+            </ul>
+        </div>
+        <div style="float: right; width: 50%;">
+            <ul>
+            <li>DevOps and Orchestration</li>
+            <li>•Vendor management</li>
+            <li>Data Quality and Governance</li>
+            <li>Agile, Scrum, MVP methodology</li>
+            <li>Data Warehouse</li>
+            <li>Digital Messaging</li>
+            <li>Disaster Recovery Planning/Risk Management</li>
+            </ul>
+        </div>
+
+       
+
 
 </body>
-</html>
